@@ -1,3 +1,9 @@
+2005-01-24  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* art_render_gradient.c: (art_render_gradient_radial_render):
+	* testart.c:
+	* testuta.c: (main): Fix some compiler warnings etc.
+
 2005-01-21  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* Release 2.3.17
